fixed background image on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -325,7 +325,7 @@ a.skill-box:hover {
 /* small tablet (portrait) */
 @media screen and (max-width: 650px) and (orientation: portrait) {
   .overlay1, .overlay2 {
-    background-position: scroll;
+    background: no-repeat center center scroll; 
   }
 
   #home-container {
@@ -463,7 +463,7 @@ a.skill-box:hover {
   }
 
   .overlay1, .overlay2 {
-    background-position: scroll;
+    background: no-repeat center center scroll; 
   }
 
   #home-text {
